# vibe-setup

./: .gitignore  CLAUDE.md  LICENSE  PHASE_1_6_COMPLETION.md  README.md  TEST.md  TEST_RESULTS.md  VALIDATION.md  docker-compose.test.yml  pyproject.toml
.claude/skills/: vibe-rag-agent-teams.md  vibe-rag-code-quality.md  vibe-rag-commit-guidelines.md  vibe-rag-component.md  vibe-rag-documentation.md  vibe-rag-error-handling.md  vibe-rag-task-workflow.md  vibe-rag-tdd.md
docs/: QUICK_REFERENCE.md  api-reference.md  quickstart.md  testing-guide.md
docs/deployment/: docker.md  kubernetes.md
docs/examples/: document_processing.md  pipeline-usage.md
docs/plans/: 2026-02-28-rag-framework-design.md  2026-02-28-vibe-rag-implementation.md  2026-03-01-async-context-manager-design.md  2026-03-01-async-context-manager.md  2026-03-01-base-vector-store-lifecycle-design.md  2026-03-01-base-vector-store-lifecycle-implementation.md  2026-03-01-claude-md-refactoring-design.md  2026-03-01-claude-md-refactoring-implementation.md  2026-03-01-document-processing-design.md  2026-03-01-document-processing-implementation.md  2026-03-01-exception-hierarchy-design.md  2026-03-01-exception-hierarchy-implementation.md  2026-03-01-local-skills-file-based-loading-design.md  2026-03-01-local-skills-file-based-loading.md  2026-03-01-phase-3-production-hardening.md  2026-03-01-pipeline-component-system-design.md  2026-03-01-pipeline-component-system-implementation.md  2026-03-01-pyproject-setup-design.md  2026-03-01-pyproject-setup-implementation.md  2026-03-01-pytest-infrastructure-design.md  2026-03-01-pytest-infrastructure-implementation.md
examples/: README.md  advanced_rag.py  langgraph_agent.py  multi_domain_rag.py  quick_start.py  simple_rag.py
tests/: README.md  conftest.py
tests/benchmarks/: test_performance.py
tests/e2e/: conftest.py  test_langgraph_e2e.py  test_rag_engine_e2e.py
tests/integration/: conftest.py  (+3 more)
vibe_rag/: __init__.py  engine.py  models.py  quick.py
(+53 files in other folders)
