[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vibe-rag"
version = "0.1.0"
description = "Production-grade modular RAG framework"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Binh Tran", email = "congbinh24k@gmail.com"}
]

dependencies = [
    "langchain>=1.0.0",
    "langchain-google-genai>=2.0.0",
    "langchain-core>=0.3.0",
    "psycopg[binary]>=3.1.0",
    "pgvector>=0.2.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "numpy>=1.24.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
langgraph = [
    "langgraph>=0.1.0",
]
all = ["vibe-rag[dev,langgraph]"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
asyncio_mode = "auto"
addopts = [
    "-v",                           # Verbose output
    "--strict-markers",             # Enforce marker registration
    "--cov=vibe_rag",              # Coverage for vibe_rag package
    "--cov-report=term-missing",   # Show missing lines in terminal
    "--cov-report=html",           # Generate HTML coverage report
    "--tb=short",                  # Shorter traceback format
]
markers = [
    "unit: Unit tests (fast, isolated)",
    "integration: Integration tests (slower, real dependencies)",
    "e2e: End-to-end tests (slowest, full workflows)",
]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]  # pycodestyle errors, pyflakes, isort
ignore = []

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
